<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reef Angel Evolution</string>
    <string name="input">In</string>
    <string name="output">Out</string>
    <string name="no_device">Please connect your Reef Angel Evolution</string>
    <string name="servo1Label">Servo<sub>1</sub></string>
    <string name="ledLabel">LED<sub>1</sub></string>
    <string name="relay1Label">Relay<sub>1</sub></string>
    <string name="relay2Label">Relay<sub>2</sub></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="next">Next</string>
    <string name="change">Change</string>
    <string name="label">Label: </string>
    <string name="function">Function: </string>
    <string name="Actinic1Label">Actinic 1</string>
    <string name="Daylight1Label">Daylight 1</string>
    <string name="Actinic2Label">Actinic 2</string>
    <string name="Daylight2Label">Daylight 2</string>
    <string name="TabStdPortsLabel">"Std Ports"</string>
    <string name="TabDimPortsLabel">"Dim Exp Ports"</string>
    <string name="TabRFVortechLabel">"RF Vortech"</string>
    <string name="TabRFRadionLabel">"RF Radion"</string>
    <string name="TabAiPortsLabel">"AI Ports"</string>
    <string name="TabIOPortsLabel">"I/O Exp Ports"</string>
    <string name="TabBoxLabel">"Box "</string>
    <string name="seconds">"seconds"</string>
    
    
    <string name="SelectDimmingLabel">Select Dimming %:</string>
    <string name="SpeedLabel">Speed</string>
    <string name="SelectSpeedLabel">Select Speed %:</string>
    <string name="SelectDurationLabel">Select Duration:</string>
    <string name="SendEmailLabel">Send email alerts to</string>
    <string name="AlertFrequencyLabel">Send alerts every</string>
    <string name="ParamSendEmailLabel">Send email alerts when xxx is</string>
    <string name="ParamLessLabel">Less than</string>
    <string name="ParamGreaterLabel">Greater than</string>
    <string name="ParamDisableLabel">To disable, set to 0</string>
    <string name="InputOnLabel">On</string>
    <string name="InputOffLabel">Off</string>
    <string name="InputDisableLabel">Never send alerts</string>
    <string name="RelayChooseModeLabel">Choose Mode:</string>
    <string name="CurrentSettingsLabel">Current Settings:</string>    
    <string name="ChangeSettingsLabel">Change Function Settings</string>    
    <string name="TimedPortSettingsLabel">Timed Port Settings:</string>    
    <string name="TimedPortTurnOnLabel">Turn On at:</string>    
    <string name="TimedPortTurnOffLabel">Turn Off at:</string>    
    <string name="HeaterSettingsLabel">Heater Settings:</string>    
    <string name="ChillerSettingsLabel">Chiller Settings:</string>    
    <string name="pHControlSettingsLabel">pH Control Settings:</string>    
    <string name="CO2ControlSettingsLabel">CO2 Control Settings:</string>    
    <string name="ATOSettingsLabel">ATO Settings:</string>    
    <string name="ATOFunctionLabel">Choose which float switches/function you are using:</string>    
    <string name="ATOTimeoutLabel">ATO Timeout:</string>    
    <string name="ATOLowLabel">Low ATO Only</string>    
    <string name="ATOHighLabel">High ATO Only</string>    
    <string name="ATOLowHighLabel">Both - Low ATO with safety High ATO</string>    
    <string name="ATOStandardLabel">Both - Standard ATO</string>    
    
    <string name="NoneSettingsLabel">No Settings to Change</string>    
</resources>