<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="10dp" >

    <TabHost
        android:id="@+id/tabhostinput"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="200dp" >

                <LinearLayout
                    android:id="@+id/InputAlerts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="invisible" >

                    <TextView
                        android:id="@+id/InputSendAlertWhenLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="20dp"
                        android:text="@string/ParamSendEmailLabel"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/EvolutionOverriden" />

                    <RadioGroup
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <RadioButton
                            android:id="@+id/InputOff"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/InputOffLabel" />

                        <RadioButton
                            android:id="@+id/InputOn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/InputOnLabel" />

                        <RadioButton
                            android:id="@+id/InputDisabled"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/InputDisableLabel" />
                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/InputSettings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="invisible" >

                    <TextView
                        android:id="@+id/TextView03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="@string/CurrentSettingsLabel"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/EvolutionOverriden" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp" >

                        <TextView
                            android:id="@+id/textview01"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <EditText
                            android:id="@+id/ParamsCurrentLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="text" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>