<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/FunctionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/HeaterSettingsLabel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/EvolutionOverriden" />

    <TextView
        android:id="@+id/textview01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TimedPortTurnOnLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <NumberPicker
            android:id="@+id/FunctionNumberOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <NumberPicker
            android:id="@+id/FunctionDecimalOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/FunctionUnitOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="º"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TimedPortTurnOffLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <NumberPicker
            android:id="@+id/FunctionNumberOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <NumberPicker
            android:id="@+id/FunctionDecimalOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/FunctionUnitOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="º"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

</LinearLayout>